--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -287,7 +287,7 @@
                                             </a>
                                         </li><!-- .nk-menu-item -->
                                         <li class="nk-menu-item">
-                                            <a href="{% url 'project:index' %}" class="nk-menu-link">
+                                            <a href="{% url 'project:project_list' %}" class="nk-menu-link">
                                                 <span class="nk-menu-icon"><em class="icon ni ni-tile-thumb"></em></span>
                                                 <span class="nk-menu-text">Research & Projects</span>
                                             </a>
