--- a/templates/dashboard/project/detail.html
+++ b/templates/dashboard/project/detail.html
@@ -7,9 +7,9 @@
                                     <div class="nk-block-head nk-block-head-lg">
                                         <div class="nk-block-between-md g-4">
                                             <div class="nk-block-head-content">
-                                                <h2 class="nk-block-title fw-normal">Jurul Project: Lorem ipsum dolor sit amet</h2>
+                                                <h2 class="nk-block-title fw-normal">{{ project.title}}</h2>
                                                 <div class="nk-block-des">
-                                                    <p>Welcome to our dashboard. Manage your account and your subscriptions.</p>
+                                                    <p>{{ project.description }}</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -145,30 +145,7 @@
                                             </div><!-- .col -->
                                         </div><!-- .row -->
                                     </div><!-- .nk-block -->
-                                    <div class="nk-block">
-                                        <div class="card card-bordered">
-                                            <div class="card-inner-group">
-                                                <div class="card-inner">
-                                                    <div class="between-center flex-wrap flex-md-nowrap g-3">
-                                                        <div class="nk-block-text">
-                                                            <h6>Enterpise Plan - <span class="text-base">$599.00 / Yearly</span></h6>
-                                                            <p class="text-soft">Unlimited access with priority support, 99.95% uptime, powerfull features and more...</p>
-                                                        </div>
-                                                        <div class="nk-block-actions flex-shrink-0">
-                                                            <a href="html/subscription/subscriptions-detail.html" class="btn btn-primary">View Plan</a>
-                                                        </div>
-                                                    </div>
-                                                </div><!-- .nk-card-inner -->
-                                                <div class="card-inner">
-                                                    <div class="between-center flex-wrap flex-md-nowrap g-3">
-                                                        <div class="nk-block-text">
-                                                            <p>Learn more about our <a href="#">subscription options</a>.</p>
-                                                        </div>
-                                                    </div>
-                                                </div><!-- .nk-card-inner -->
-                                            </div>
-                                        </div>
-                                    </div><!-- .nk-block -->
+
                                     <div class="nk-block">
                                         <div class="card card-bordered">
                                             <div class="card-inner">
@@ -211,7 +188,7 @@
                                         <div class="card card-bordered">
                                             <div class="card-inner card-inner-md">
                                                 <div class="card-title-group">
-                                                    <h6 class="card-title">Payment History</h6>
+                                                    <h6 class="card-title">Progress</h6>
                                                     <div class="card-action">
                                                         <a href="html/subscription/payments.html" class="link link-sm">See All <em class="icon ni ni-chevron-right"></em></a>
                                                     </div>
