--- a/templates/dashboard/ai/base.html
+++ b/templates/dashboard/ai/base.html
@@ -282,40 +282,26 @@
                                         <li class="nk-menu-item">
                                             <a href="{% url 'web:index' %}" class="nk-menu-link">
                                                 <span class="nk-menu-icon"><em class="icon ni ni-globe"></em></span>
-                                                <span class="nk-menu-text">Website</span>
+                                                <span class="nk-menu-text">Chat AI</span>
 
                                             </a>
                                         </li><!-- .nk-menu-item -->
                                         <li class="nk-menu-item">
                                             <a href="{% url 'project:project_list' %}" class="nk-menu-link">
                                                 <span class="nk-menu-icon"><em class="icon ni ni-tile-thumb"></em></span>
-                                                <span class="nk-menu-text">Research & Projects</span>
+                                                <span class="nk-menu-text">Video Transcriptions</span>
                                             </a>
                                         </li><!-- .nk-menu-item -->
                                         <li class="nk-menu-item">
                                             <a href="{% url 'publications:index' %}" class="nk-menu-link">
                                                 <span class="nk-menu-icon"><em class="icon ni ni-text-rich"></em></span>
-                                                <span class="nk-menu-text">Publications</span>
+                                                <span class="nk-menu-text">Speech Generator</span>
                                             </a>
                                         </li><!-- .nk-menu-item -->
                                         <li class="nk-menu-item">
                                             <a href="{% url 'events:index' %}" class="nk-menu-link">
                                                 <span class="nk-menu-icon"><em class="icon ni ni-calendar-booking"></em></span>
-                                                <span class="nk-menu-text">Event Management</span>
-                                            </a>
-                                        </li><!-- .nk-menu-item -->
-                                        <li class="nk-menu-item">
-                                            <a href="{% url 'web:index-srm' %}" class="nk-menu-link">
-                                                <span class="nk-menu-icon"><em class="icon ni ni-contact"></em></span>
-                                                <span class="nk-menu-text">Stakeholder Relationship<br> Management (SRM)</span>
-
-                                            </a>
-                                        </li><!-- .nk-menu-item -->
-                                        <li class="nk-menu-item">
-                                            <a href="html/index-analytics.html" class="nk-menu-link">
-                                                <span class="nk-menu-icon"><em class="icon ni ni-share-alt"></em></span>
-                                                <span class="nk-menu-text">Data Warehouse</span>
-
+                                                <span class="nk-menu-text">Note Taking</span>
                                             </a>
                                         </li><!-- .nk-menu-item -->
 
@@ -326,125 +312,34 @@
                                         <li class="nk-menu-item has-sub">
                                             <a href="#" class="nk-menu-link nk-menu-toggle">
                                                 <span class="nk-menu-icon"><em class="icon ni ni-package"></em></span>
-                                                <span class="nk-menu-text">Assets</span>
+                                                <span class="nk-menu-text">Downloader</span>
                                             </a>
                                             <ul class="nk-menu-sub">
                                                 <li class="nk-menu-item">
-                                                    <a href="{% url 'web:index-asset' %}" class="nk-menu-link"><span class="nk-menu-text">Assets List</span></a>
+                                                    <a href="{% url 'web:index-asset' %}" class="nk-menu-link"><span class="nk-menu-text">Youtube</span></a>
                                                 </li>
                                                 <li class="nk-menu-item">
-                                                    <a href="html/project-list.html" class="nk-menu-link"><span class="nk-menu-text">Asset Availability</span></a>
-                                                </li>
-                                            </ul><!-- .nk-menu-sub -->
-                                        </li><!-- .nk-menu-item -->
-                                        <li class="nk-menu-item has-sub">
-                                            <a href="#" class="nk-menu-link nk-menu-toggle">
-                                                <span class="nk-menu-icon"><em class="icon ni ni-users"></em></span>
-                                                <span class="nk-menu-text">Staff</span>
-                                            </a>
-                                            <ul class="nk-menu-sub">
-                                                <li class="nk-menu-item">
-                                                    <a href="html/user-list-regular.html" class="nk-menu-link"><span class="nk-menu-text">Staff List</span></a>
+                                                    <a href="html/project-list.html" class="nk-menu-link"><span class="nk-menu-text">X/Twitter</span></a>
                                                 </li>
                                                 <li class="nk-menu-item">
-                                                    <a href="html/user-list-compact.html" class="nk-menu-link"><span class="nk-menu-text">Department</span></a>
-                                                </li>
-                                                <li class="nk-menu-item">
-                                                    <a href="html/user-details-regular.html" class="nk-menu-link"><span class="nk-menu-text">Research Fellow</span></a>
-                                                </li>
-                                                <li class="nk-menu-item">
-                                                    <a href="html/user-profile-regular.html" class="nk-menu-link"><span class="nk-menu-text">Internship</span></a>
-                                                </li>
-                                            </ul><!-- .nk-menu-sub -->
-                                        </li><!-- .nk-menu-item -->
-                                        <li class="nk-menu-item has-sub">
-                                            <a href="#" class="nk-menu-link nk-menu-toggle">
-                                                <span class="nk-menu-icon"><em class="icon ni ni-cc-new"></em></span>
-                                                <span class="nk-menu-text">AI Hub</span>
-                                            </a>
-                                            <ul class="nk-menu-sub">
-                                                <li class="nk-menu-item">
-                                                    <a href="{% url 'tools:chatlist' %}" class="nk-menu-link"><span class="nk-menu-text">Chat</span></a>
-                                                </li>
-                                                <li class="nk-menu-item">
-                                                    <a href="html/user-list-compact.html" class="nk-menu-link"><span class="nk-menu-text">Note Taking</span></a>
-                                                </li>
-                                                <li class="nk-menu-item">
-                                                    <a href="html/user-details-regular.html" class="nk-menu-link"><span class="nk-menu-text">Speech Generator</span></a>
-                                                </li>
-                                                <li class="nk-menu-item">
-                                                    <a href="html/user-profile-regular.html" class="nk-menu-link"><span class="nk-menu-text">Transcription</span></a>
-                                                </li>
-                                            </ul><!-- .nk-menu-sub -->
-                                        </li><!-- .nk-menu-item -->
-
-                                        <li class="nk-menu-item has-sub">
-                                            <a href="#" class="nk-menu-link nk-menu-toggle">
-                                                <span class="nk-menu-icon"><em class="icon ni ni-qr"></em></span>
-                                                <span class="nk-menu-text">Tools</span>
-                                            </a>
-                                            <ul class="nk-menu-sub">
-                                                <li class="nk-menu-item">
-                                                    <a href="html/history-payment.html" class="nk-menu-link"><span class="nk-menu-text">QR Code</span></a>
-                                                </li>
-                                                <li class="nk-menu-item">
-                                                    <a href="html/history-invoice-list.html" class="nk-menu-link"><span class="nk-menu-text">Shorten URL</span></a>
-                                                </li>
-                                                <li class="nk-menu-item">
-                                                    <a href="html/history-invoice.html" class="nk-menu-link"><span class="nk-menu-text">PDF Tools</span></a>
-                                                </li>
-                                            </ul><!-- .nk-menu-sub -->
-                                        </li><!-- .nk-menu-item -->
-                                        <li class="nk-menu-item has-sub">
-                                            <a href="#" class="nk-menu-link nk-menu-toggle">
-                                                <span class="nk-menu-icon"><em class="icon ni ni-help-alt"></em></span>
-                                                <span class="nk-menu-text">Support & Ticket</span>
-                                            </a>
-                                            <ul class="nk-menu-sub">
-                                                <li class="nk-menu-item">
-                                                    <a href="html/support-kb.html" class="nk-menu-link"><span class="nk-menu-text">Support</span></a>
-                                                </li>
-                                                <li class="nk-menu-item">
-                                                    <a href="html/support-kb-topics.html" class="nk-menu-link"><span class="nk-menu-text">Ticket</span></a>
-                                                </li>
-                                                <li class="nk-menu-item">
-                                                    <a href="html/support-kb-details.html" class="nk-menu-link"><span class="nk-menu-text">Software List</span></a>
-                                                </li>
-
-                                            </ul><!-- .nk-menu-sub -->
-                                        </li><!-- .nk-menu-item -->
-                                        <li class="nk-menu-item has-sub">
-                                            <a href="#" class="nk-menu-link nk-menu-toggle">
-                                                <span class="nk-menu-icon"><em class="icon ni ni-card-view"></em></span>
-                                                <span class="nk-menu-text">Knowledge<br>Repository</span>
-                                            </a>
-                                            <ul class="nk-menu-sub">
-                                                <li class="nk-menu-item">
-                                                    <a href="html/product-list.html" class="nk-menu-link"><span class="nk-menu-text">E-Library</span></a>
-                                                </li>
-                                                <li class="nk-menu-item">
-                                                    <a href="html/product-card.html" class="nk-menu-link"><span class="nk-menu-text">Library</span></a>
-                                                </li>
-                                                <li class="nk-menu-item">
-                                                    <a href="html/product-details.html" class="nk-menu-link"><span class="nk-menu-text">Subscriptions</span></a>
-                                                </li>
-                                                <li class="nk-menu-item">
-                                                    <a href="html/product-details.html" class="nk-menu-link"><span class="nk-menu-text">Clipping</span></a>
-                                                </li>
-                                                <li class="nk-menu-item">
-                                                    <a href="html/product-details.html" class="nk-menu-link"><span class="nk-menu-text">Journals</span></a>
-                                                </li>
-                                                <li class="nk-menu-item">
-                                                    <a href="html/product-details.html" class="nk-menu-link"><span class="nk-menu-text">Audio File</span></a>
+                                                    <a href="html/project-list.html" class="nk-menu-link"><span class="nk-menu-text">Instagram</span></a>
                                                 </li>
                                             </ul><!-- .nk-menu-sub -->
                                         </li><!-- .nk-menu-item -->
                                         <li class="nk-menu-item">
                                             <a href="html/gallery.html" class="nk-menu-link">
                                                 <span class="nk-menu-icon"><em class="icon ni ni-img"></em></span>
-                                                <span class="nk-menu-text">Digital Assets</span>
+                                                <span class="nk-menu-text">Qr Code</span>
                                             </a>
                                         </li><!-- .nk-menu-item -->
+                                        <li class="nk-menu-item">
+                                            <a href="html/gallery.html" class="nk-menu-link">
+                                                <span class="nk-menu-icon"><em class="icon ni ni-img"></em></span>
+                                                <span class="nk-menu-text">Shorten URL</span>
+                                            </a>
+                                        </li><!-- .nk-menu-item -->
+                                        
+                                        
                                         <li class="nk-menu-heading">
                                             <h6 class="overline-title text-primary-alt">Others</h6>
                                         </li><!-- .nk-menu-heading -->
