--- a/templates/dashboard/ai/detail_bak.html
+++ b/templates/dashboard/ai/detail_bak.html
@@ -1,4 +1,4 @@
-{% extends 'dashboard/chat/base.html' %}
+{% extends 'dashboard/ai/base.html' %}
 {% load custom_filters %}
 
                 {% block content %}
