--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -299,7 +299,7 @@
                                             </a>
                                         </li><!-- .nk-menu-item -->
                                         <li class="nk-menu-item">
-                                            <a href="{% url 'events:index' %}" class="nk-menu-link">
+                                            <a href="{% url 'events:event_list' %}" class="nk-menu-link">
                                                 <span class="nk-menu-icon"><em class="icon ni ni-calendar-booking"></em></span>
                                                 <span class="nk-menu-text">Event Management</span>
                                             </a>
