--- a/templates/dashboard/project/base.html
+++ b/templates/dashboard/project/base.html
@@ -202,7 +202,7 @@
                                             <h6 class="overline-title">Menu</h6>
                                         </li>
                                         <li class="nk-menu-item">
-                                            <a href="{% url 'web:index' %}" class="nk-menu-link">
+                                            <a href="{% url 'project:project_list' %}" class="nk-menu-link">
                                                 <span class="nk-menu-icon"><em class="icon ni ni-dashboard"></em></span>
                                                 <span class="nk-menu-text">Dashboard</span>
                                             </a>
