--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -299,6 +299,12 @@
                                             </a>
                                         </li><!-- .nk-menu-item -->
                                         <li class="nk-menu-item">
+                                            <a href="{% url 'publications:index' %}" class="nk-menu-link">
+                                                <span class="nk-menu-icon"><em class="icon ni ni-article"></em></span>
+                                                <span class="nk-menu-text">News</span>
+                                            </a>
+                                        </li><!-- .nk-menu-item -->
+                                        <li class="nk-menu-item">
                                             <a href="{% url 'events:event_list' %}" class="nk-menu-link">
                                                 <span class="nk-menu-icon"><em class="icon ni ni-calendar-booking"></em></span>
                                                 <span class="nk-menu-text">Event Management</span>
@@ -443,6 +449,18 @@
                                             <a href="html/gallery.html" class="nk-menu-link">
                                                 <span class="nk-menu-icon"><em class="icon ni ni-img"></em></span>
                                                 <span class="nk-menu-text">Digital Assets</span>
+                                            </a>
+                                        </li><!-- .nk-menu-item -->
+                                        <li class="nk-menu-item">
+                                            <a href="html/gallery.html" class="nk-menu-link">
+                                                <span class="nk-menu-icon"><em class="icon ni ni-calendar-alt"></em></span>
+                                                <span class="nk-menu-text">Calendar</span>
+                                            </a>
+                                        </li><!-- .nk-menu-item -->
+                                        <li class="nk-menu-item">
+                                            <a href="html/gallery.html" class="nk-menu-link">
+                                                <span class="nk-menu-icon"><em class="icon ni ni-archive"></em></span>
+                                                <span class="nk-menu-text">On Boarding</span>
                                             </a>
                                         </li><!-- .nk-menu-item -->
                                         <li class="nk-menu-heading">
