--- a/templates/dashboard/project/detail.html
+++ b/templates/dashboard/project/detail.html
@@ -185,103 +185,123 @@
                                         </div>
                                     </div><!-- .nk-block -->
                                     <div class="nk-block">
-                                        <div class="card card-bordered">
-                                            <div class="card-inner card-inner-md">
-                                                <div class="card-title-group">
-                                                    <h6 class="card-title">Progress</h6>
-                                                    <div class="card-action">
-                                                        <a href="html/subscription/payments.html" class="link link-sm">See All <em class="icon ni ni-chevron-right"></em></a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <table class="table table-tranx">
-                                                <thead>
-                                                    <tr class="tb-tnx-head">
-                                                        <th class="tb-tnx-id"><span class="">#</span></th>
-                                                        <th class="tb-tnx-info">
-                                                            <span class="tb-tnx-desc d-none d-sm-inline-block">
-                                                                <span>Bill For</span>
-                                                            </span>
-                                                            <span class="tb-tnx-date d-md-inline-block d-none">
-                                                                <span class="d-md-none">Date</span>
-                                                                <span class="d-none d-md-block">
-                                                                    <span>Issue Date</span>
-                                                                    <span>Due Date</span>
-                                                                </span>
-                                                            </span>
-                                                        </th>
-                                                        <th class="tb-tnx-amount">
-                                                            <span class="tb-tnx-total">Total</span>
-                                                            <span class="tb-tnx-status d-none d-md-inline-block">Status</span>
-                                                        </th>
-                                                </thead>
-                                                <tbody>
-                                                    <tr class="tb-tnx-item">
-                                                        <td class="tb-tnx-id">
-                                                            <a href="#"><span>4947</span></a>
-                                                        </td>
-                                                        <td class="tb-tnx-info">
-                                                            <div class="tb-tnx-desc">
-                                                                <span class="title">Enterprize Year Subscrition</span>
-                                                            </div>
-                                                            <div class="tb-tnx-date">
-                                                                <span class="date">10-05-2019</span>
-                                                                <span class="date">10-13-2019</span>
-                                                            </div>
-                                                        </td>
-                                                        <td class="tb-tnx-amount">
-                                                            <div class="tb-tnx-total">
-                                                                <span class="amount">$599.00</span>
-                                                            </div>
-                                                            <div class="tb-tnx-status">
-                                                                <span class="badge badge-dot bg-warning">Due</span>
-                                                            </div>
-                                                        </td>
-                                                    </tr><!-- .tb-tnx-item -->
-                                                    <tr class="tb-tnx-item">
-                                                        <td class="tb-tnx-id">
-                                                            <a href="#"><span>4904</span></a>
-                                                        </td>
-                                                        <td class="tb-tnx-info">
-                                                            <div class="tb-tnx-desc">
-                                                                <span class="title">Maintenance Year Subscription</span>
-                                                            </div>
-                                                            <div class="tb-tnx-date">
-                                                                <span class="date">06-19-2019</span>
-                                                                <span class="date">06-26-2019</span>
-                                                            </div>
-                                                        </td>
-                                                        <td class="tb-tnx-amount">
-                                                            <div class="tb-tnx-total">
-                                                                <span class="amount">$99.00</span>
-                                                            </div>
-                                                            <div class="tb-tnx-status"><span class="badge badge-dot bg-success">Paid</span></div>
-                                                        </td>
-                                                    </tr><!-- .tb-tnx-item -->
-                                                    <tr class="tb-tnx-item">
-                                                        <td class="tb-tnx-id">
-                                                            <a href="#"><span>4829</span></a>
-                                                        </td>
-                                                        <td class="tb-tnx-info">
-                                                            <div class="tb-tnx-desc">
-                                                                <span class="title">Enterprize Year Subscrition</span>
-                                                            </div>
-                                                            <div class="tb-tnx-date">
-                                                                <span class="date">10-04-2018</span>
-                                                                <span class="date">10-12-2018</span>
-                                                            </div>
-                                                        </td>
-                                                        <td class="tb-tnx-amount">
-                                                            <div class="tb-tnx-total">
-                                                                <span class="amount">$599.00</span>
-                                                            </div>
-                                                            <div class="tb-tnx-status"><span class="badge badge-dot bg-success">Paid</span></div>
-                                                        </td>
-                                                    </tr><!-- .tb-tnx-item -->
-                                                </tbody>
-                                            </table>
-                                        </div><!-- .card -->
-                                    </div><!-- .nk-block -->
+    <div class="card card-bordered">
+        <div class="card-inner card-inner-md">
+            <div class="card-title-group">
+                <h6 class="card-title">Activity Logs</h6>
+                <div class="card-action">
+                    <a href="#" class="link link-sm">See All <em class="icon ni ni-chevron-right"></em></a>
+                </div>
+            </div>
+        </div>
+        <table class="table table-tranx">
+            <thead>
+                <tr class="tb-tnx-head">
+                    <th class="tb-tnx-id" style="width: 5%"><span>#</span></th>
+                    <th class="tb-tnx-info" style="width: 45%">
+                        <span class="tb-tnx-desc d-none d-sm-inline-block">
+                            <span>Activity</span>
+                        </span>
+                        <span class="tb-tnx-date d-md-inline-block d-none">
+                            <span class="d-none d-md-block">
+                                <span>Date</span>
+                                <span>User</span>
+                            </span>
+                        </span>
+                    </th>
+                    <th class="tb-tnx-amount" style="width: 25%">
+                        <span class="d-none d-md-inline-block">Assigned To</span>
+                    </th>
+                    <th class="tb-tnx-amount" style="width: 25%">
+                        <span class="tb-tnx-status d-none d-md-inline-block">Action Type</span>
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for log in activity_logs %}
+                <tr class="tb-tnx-item">
+                    <td class="tb-tnx-id">
+                        <a href="#"><span>{{ forloop.counter }}</span></a>
+                    </td>
+                    <td class="tb-tnx-info">
+                        <div class="tb-tnx-desc">
+                            <span class="title">{{ log.description }}</span>
+                            {% if log.changes %}
+                            <div class="smaller text-muted mt-1">
+                                {% if log.action_type == 'status_change' %}
+                                    Changed from "{{ log.changes.from_status }}" to "{{ log.changes.to_status }}"
+                                {% elif log.action_type == 'assignment' %}
+                                    {% if log.changes.from_user %}
+                                        Reassigned from {{ log.changes.from_user }} to {% if log.changes.to_user %}{{ log.changes.to_user }}{% else %}no one{% endif %}
+                                    {% else %}
+                                        Assigned to {{ log.changes.to_user }}
+                                    {% endif %}
+                                {% elif log.changes.changed_fields %}
+                                    {% for change in log.changes.changed_fields %}
+                                        Changed {{ change.field }} from "{{ change.from }}" to "{{ change.to }}"
+                                    {% endfor %}
+                                {% endif %}
+                            </div>
+                            {% endif %}
+                        </div>
+                        <div class="tb-tnx-date">
+                            <span class="date">{{ log.timestamp|date:"d-m-Y H:i" }}</span>
+                            <span class="date">{{ log.actor.get_full_name|default:log.actor.username }}</span>
+                        </div>
+                    </td>
+                    <td class="tb-tnx-amount">
+                        {% if log.content_type.model == 'task' %}
+                            {% with task=log.content_object %}
+                                {% if task.assigned_to %}
+                                    <div class="user-info">
+                                        <span class="tb-lead">{{ task.assigned_to.get_full_name|default:task.assigned_to.username }}</span>
+                                        {% if task.assigned_to.email %}
+                                            <span class="sub-text">{{ task.assigned_to.email }}</span>
+                                        {% endif %}
+                                    </div>
+                                {% else %}
+                                    <span class="sub-text">Unassigned</span>
+                                {% endif %}
+                            {% endwith %}
+                        {% else %}
+                            <span class="sub-text">-</span>
+                        {% endif %}
+                    </td>
+                    <td class="tb-tnx-amount">
+                        <div class="tb-tnx-status">
+                            {% with action_type=log.action_type %}
+                            {% if action_type == 'create' %}
+                                <span class="badge badge-dot bg-success">Created</span>
+                            {% elif action_type == 'update' %}
+                                <span class="badge badge-dot bg-info">Updated</span>
+                            {% elif action_type == 'delete' %}
+                                <span class="badge badge-dot bg-danger">Deleted</span>
+                            {% elif action_type == 'status_change' %}
+                                <span class="badge badge-dot bg-warning">Status Changed</span>
+                            {% elif action_type == 'assignment' %}
+                                <span class="badge badge-dot bg-primary">Assigned</span>
+                            {% elif action_type == 'member_add' %}
+                                <span class="badge badge-dot bg-success">Member Added</span>
+                            {% elif action_type == 'member_remove' %}
+                                <span class="badge badge-dot bg-danger">Member Removed</span>
+                            {% else %}
+                                <span class="badge badge-dot bg-secondary">{{ log.get_action_type_display }}</span>
+                            {% endif %}
+                            {% endwith %}
+                        </div>
+                    </td>
+                </tr>
+                {% empty %}
+                <tr>
+                    <td colspan="4" class="text-center">
+                        <span class="text-muted">No activity logs found</span>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+</div>
                                 </div>
                                 <!-- footer @s -->
                                 <div class="nk-footer">
@@ -328,4 +348,37 @@
                                 </div>
                                 <!-- footer @e -->
                             </div>
+{% endblock %}
+
+{% block css %}
+    <style>
+.smaller {
+    font-size: 0.85em;
+}
+.table-tranx .tb-tnx-desc .title {
+    white-space: normal;
+    line-height: 1.4;
+}
+.user-info {
+    display: flex;
+    flex-direction: column;
+}
+.user-info .tb-lead {
+    font-weight: 500;
+    line-height: 1.2;
+}
+.user-info .sub-text {
+    font-size: 0.85em;
+    color: #8094ae;
+}
+.tb-tnx-amount {
+    vertical-align: middle;
+}
+.sub-text {
+    color: #8094ae;
+}
+.badge {
+    white-space: nowrap;
+}
+</style>
 {% endblock %}
