--- a/templates/dashboard/events/calendar.html
+++ b/templates/dashboard/events/calendar.html
@@ -30,11 +30,11 @@
                         </div>
                         <hr class="py-2">
                         <div class="mb-4 fw-bold">
-                            <h6 class="overline-title text-base">FEB</h6>
+                            <h6 class="overline-title text-base fw-bolder">FEB</h6>
                             <div id="febCalendar" class="mini-calendar"></div>
                         </div>
                         <div class="mb-4 fw-bold">
-                            <h6 class="overline-title text-base">APR</h6>
+                            <h6 class="overline-title text-base fw-bolder">APR</h6>
                             <div id="aprCalendar" class="mini-calendar"></div>
                         </div>
                     </div>
